Manual implementation, gradient descent

--- a/pytorch/gradient_descent.ipynb
+++ b/pytorch/gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d663d968",
+   "id": "4aaf618b",
    "metadata": {},
    "source": [
     "# Tensor Basics"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e9c22e54",
+   "id": "20869990",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9085793e",
+   "id": "cdd87eb7",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "57ebeed8",
+   "id": "1e4d81d4",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6ad000f7",
+   "id": "d66f51e3",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "351bb13a",
+   "id": "29e66e4e",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba99f00",
+   "id": "a05ebb6c",
    "metadata": {},
    "source": [
     "### Tensor Details"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c9ac0bda",
+   "id": "9474c5df",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ab7d9a6f",
+   "id": "e64203ce",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "424b2f32",
+   "id": "71373787",
    "metadata": {},
    "source": [
     "### Tensor Operations"
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e61026f9",
+   "id": "545d754d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c63985ae",
+   "id": "18864310",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0713109f",
+   "id": "da3f79ca",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b4be0196",
+   "id": "4f4dc98f",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "06a37fd2",
+   "id": "1e64ffa0",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0bd086c7",
+   "id": "722122dc",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "44f4d0b2",
+   "id": "7a4b3cce",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "94f63005",
+   "id": "f645d50f",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "df918fc5",
+   "id": "fde4a2a4",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2ffaaad6",
+   "id": "4fa98a3f",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b93f12e7",
+   "id": "32b6e0cf",
    "metadata": {},
    "source": [
     "### Advanced Operations"
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16f3396",
+   "id": "4699edf1",
    "metadata": {},
    "source": [
     "**Slicing tensors**"
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "c8c4e0ce",
+   "id": "b6109727",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a48cda94",
+   "id": "4d70652b",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ee3476be",
+   "id": "1f020f4a",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "4a637957",
+   "id": "27fd38c5",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5016399a",
+   "id": "5c483ca2",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "a0fb1c43",
+   "id": "7dd736ef",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bff7950",
+   "id": "afc0c997",
    "metadata": {},
    "source": [
     "**Reshaping tensors**"
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "033a5b69",
+   "id": "a866f12f",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "e8f89808",
+   "id": "1cbce8af",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "7c7b8402",
+   "id": "62cee5b4",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cb79dc",
+   "id": "994cf4f6",
    "metadata": {},
    "source": [
     "**NumPy and PyTorch Tensors**"
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "5291b5f7",
+   "id": "349644b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "8d554822",
+   "id": "63c4dce4",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "a8360fda",
+   "id": "f6330973",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1bf9794",
+   "id": "fb7c328f",
    "metadata": {},
    "source": [
     "### CPU & GPU"
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "5a13907d",
+   "id": "64c52236",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "f9b07077",
+   "id": "8234fd07",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "2b1dd42f",
+   "id": "3fd55b52",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "281d5ea2",
+   "id": "bd34d8fd",
    "metadata": {},
    "outputs": [
     {
@@ -719,9 +719,547 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0b5377a",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "## Gradient Calculation w/ Autograd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "31aef4c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1.4170,  0.9041, -2.7062], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tell PyTorch to create a computational graph that tracks ops\n",
+    "x = torch.randn(3, requires_grad=True)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "5ecbfaaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 3.4170,  2.9041, -0.7062], grad_fn=<AddBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = x + 2\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "041f5975",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 6.8340,  5.8083, -1.4124], grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = y * 2\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "994ebc49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# z = z.mean()\n",
+    "# print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "1fd7c454",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.8667, 2.6667, 0.6687])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Backward fn needs a gradient vector for multiplication w/\n",
+    "# Jacobian matrix of partial derivatives\n",
+    "v = torch.tensor([0.1, 1.0, 0.001], dtype=torch.float32)\n",
+    "z.backward(v)\n",
+    "print(x.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8051c659",
+   "metadata": {},
+   "source": [
+    "**Turning off gradient tracking**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "24dfb0af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1.4170,  0.9041, -2.7062])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.requires_grad_(True)\n",
+    "x.requires_grad_(False)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "cedddfce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:  tensor([ 1.4170,  0.9041, -2.7062], requires_grad=True)\n",
+      "y:  tensor([ 1.4170,  0.9041, -2.7062])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.requires_grad_(True)\n",
+    "y = x.detach()\n",
+    "print(\"x: \", x)\n",
+    "print(\"y: \", y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "0ae009c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 3.4170,  2.9041, -0.7062], grad_fn=<AddBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = x + 2\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "d9f6433b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 3.4170,  2.9041, -0.7062])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    y = x + 2\n",
+    "    print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89df513a",
+   "metadata": {},
+   "source": [
+    "**Gradient accumulation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "c1082bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3., 3., 3., 3.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Whenever backward function is called, gradients are accumulated\n",
+    "# In the .grad attribute\n",
+    "\n",
+    "weights = torch.ones(4, requires_grad=True)\n",
+    "\n",
+    "# Incorrect!\n",
+    "for epoch in range(1):\n",
+    "    model_output = (weights*3).sum()\n",
+    "    model_output.backward()\n",
+    "    print(weights.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "d4b96fd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([6., 6., 6., 6.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Incorrect!\n",
+    "for epoch in range(1):\n",
+    "    model_output = (weights*3).sum()\n",
+    "    model_output.backward()\n",
+    "    print(weights.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "cc475037",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([9., 9., 9., 9.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Incorrect!\n",
+    "for epoch in range(1):\n",
+    "    model_output = (weights*3).sum()\n",
+    "    model_output.backward()\n",
+    "    print(weights.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "cbbd2fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3., 3., 3., 3.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Correct!\n",
+    "for epoch in range(1):\n",
+    "    model_output = (weights*3).sum()\n",
+    "    model_output.backward()\n",
+    "    print(weights.grad)\n",
+    "    weights.grad.zero_()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "8b2d3b7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3., 3., 3., 3.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Correct!\n",
+    "for epoch in range(1):\n",
+    "    model_output = (weights*3).sum()\n",
+    "    model_output.backward()\n",
+    "    print(weights.grad)\n",
+    "    weights.grad.zero_()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed39615d",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "## Backpropagation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c23c12",
+   "id": "80a0d3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute loss (forward), \n",
+    "# compute local gradients, \n",
+    "# compute weight updates (backward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "582783ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.tensor(1.0)\n",
+    "y = torch.tensor(2.0)\n",
+    "\n",
+    "w = torch.tensor(1.0, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "e1b7a14b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1., grad_fn=<PowBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# forward pass\n",
+    "y_hat = w * x\n",
+    "loss = (y_hat - y)**2\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "e6da8af4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(-2.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# backward pass\n",
+    "loss.backward()\n",
+    "print(w.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6cf21ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update weights, next forward & backward pass "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e394469d",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "## Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "cf25249b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimizing model using automatic gradient computation (autograd)\n",
+    "# Implement gradient descent (linear regression) steps manually\n",
+    "# Prediction and loss function\n",
+    "# Numerical calculation of gradients\n",
+    "# Gradient descent to optimize parameters\n",
+    "# Replace everything with autograd and pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "0e15d023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "70cb34f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# linear combination of weights, inputs: f = w * x\n",
+    "X = np.array([1, 2, 3, 4], dtype=np.float32)\n",
+    "Y = np.array([2, 4, 6, 8], dtype=np.float32)\n",
+    "\n",
+    "# Initialize weights\n",
+    "w = 0.0\n",
+    "\n",
+    "# Model prediction\n",
+    "def forward(x):\n",
+    "    return w * x\n",
+    "\n",
+    "# MSE loss\n",
+    "def loss(y, y_pred):\n",
+    "    return ((y_pred - y)**2).mean()\n",
+    "\n",
+    "# Gradient\n",
+    "# MSE = 1/N * (w*x - y)**2\n",
+    "# dJ/dw = 1/N * 2x * (w*x - y)\n",
+    "def grad(x, y, y_pred):\n",
+    "    return np.dot(2*x, (y_pred-y)).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "2f5ee822",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction before training: f(5) = 6.000\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float32' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [146]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[1;32m      8\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m forward(X)\n\u001b[0;32m----> 9\u001b[0m     l \u001b[38;5;241m=\u001b[39m loss(Y, y_pred)\n\u001b[1;32m     10\u001b[0m     dw \u001b[38;5;241m=\u001b[39m grad(X, Y, y_pred)\n\u001b[1;32m     11\u001b[0m     w \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m learning_rate \u001b[38;5;241m*\u001b[39m dw\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float32' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Prediction before training: f(5) = {forward(5):.3f}')\n",
+    "\n",
+    "# Training\n",
+    "learning_rate = 0.01\n",
+    "num_epochs = 10\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    y_pred = forward(X)\n",
+    "    l = loss(Y, y_pred)\n",
+    "    dw = grad(X, Y, y_pred)\n",
+    "    w -= learning_rate * dw\n",
+    "    \n",
+    "    if epoch % 1 == 0:\n",
+    "        print(f'epoch {epoch+1}: w = {w:.3f}, loss = {l:.8f}')\n",
+    "        \n",
+    "print(f'Prediction after training: f(5) = {forward(5):.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "33670fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = forward(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "d901ed55",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float32' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [148]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m l \u001b[38;5;241m=\u001b[39m loss(Y, y_pred)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float32' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "l = loss(Y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b833554b",
    "metadata": {},
    "outputs": [],
    "source": []
