--- a/pytorch/neural_networks.ipynb
+++ b/pytorch/neural_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b53f920f",
+   "id": "c84bf0af",
    "metadata": {},
    "source": [
     "# Neural Networks"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5390c33a",
+   "id": "dd673b68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d1e5f6ad",
+   "id": "13c081d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0659504f",
+   "id": "1308ce72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6e123a7a",
+   "id": "7746e0e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9756ab6d",
+   "id": "0e477ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6d620cbf",
+   "id": "babd988d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3aacfd14",
+   "id": "3acfa134",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "45cd7c44",
+   "id": "dc2fb46f",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6df7a83b",
+   "id": "736ea13e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5c0a04e5",
+   "id": "f2f84dd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c4c83a29",
+   "id": "08b9c343",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ada32bb7",
+   "id": "92a3f4f3",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd288d4b",
+   "id": "003f329b",
    "metadata": {},
    "source": [
     "# Convolutional Neural Networks"
@@ -297,11 +297,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e339f3d9",
+   "execution_count": 30,
+   "id": "59aa8147",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_epochs = 4\n",
+    "batch_size = 4\n",
+    "learning_rate = 0.001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e16bb133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose(\n",
+    "    [transforms.ToTensor(),\n",
+    "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a02c8e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b4bf7a985ce461a95b3b949f91d3db5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/170498071 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/cifar-10-python.tar.gz to ./data\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_dataset = torchvision.datasets.CIFAR10(root='./data', \n",
+    "                train=True, transform=transforms.ToTensor(),\n",
+    "                download=True)\n",
+    "test_dataset = torchvision.datasets.CIFAR10(root='./data', \n",
+    "                train=False, transform=transforms.ToTensor())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "47af155c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = torch.utils.data.DataLoader(dataset=train_dataset,\n",
+    "                 batch_size=batch_size, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(dataset=train_dataset,\n",
+    "                 batch_size=batch_size, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b9b864b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = ('plane', 'car', 'bird', 'cat',\n",
+    "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5b462c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 3, 32, 32])\n",
+      "torch.Size([4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "example = iter(train_loader)\n",
+    "sample, label = example.next()\n",
+    "print(f'{sample.shape}')\n",
+    "print(f'{label.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b8188277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class ConvNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ConvNet, self).__init__()\n",
+    "        # input channel size, output channel size, kernel size\n",
+    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+    "        # kernel size, stride length\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+    "        # Dimensions after convolutions, pooling, and flattening\n",
+    "        self.fc1 = nn.Linear(16*5*5, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 10)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 16*5*5)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "42e335a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ConvNet()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "152b4f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_steps = len(train_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5c697999",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1/4, step 2000/12500, loss = 2.3193\n",
+      "epoch 1/4, step 4000/12500, loss = 2.3237\n",
+      "epoch 1/4, step 6000/12500, loss = 2.3101\n",
+      "epoch 1/4, step 8000/12500, loss = 2.2921\n",
+      "epoch 1/4, step 10000/12500, loss = 2.3068\n",
+      "epoch 1/4, step 12000/12500, loss = 2.2998\n",
+      "epoch 2/4, step 2000/12500, loss = 2.2909\n",
+      "epoch 2/4, step 4000/12500, loss = 2.2334\n",
+      "epoch 2/4, step 6000/12500, loss = 2.1802\n",
+      "epoch 2/4, step 8000/12500, loss = 1.5367\n",
+      "epoch 2/4, step 10000/12500, loss = 1.4836\n",
+      "epoch 2/4, step 12000/12500, loss = 2.9232\n",
+      "epoch 3/4, step 2000/12500, loss = 1.9299\n",
+      "epoch 3/4, step 4000/12500, loss = 1.8964\n",
+      "epoch 3/4, step 6000/12500, loss = 1.9879\n",
+      "epoch 3/4, step 8000/12500, loss = 2.1019\n",
+      "epoch 3/4, step 10000/12500, loss = 1.6567\n",
+      "epoch 3/4, step 12000/12500, loss = 1.8982\n",
+      "epoch 4/4, step 2000/12500, loss = 1.3865\n",
+      "epoch 4/4, step 4000/12500, loss = 1.6485\n",
+      "epoch 4/4, step 6000/12500, loss = 1.4678\n",
+      "epoch 4/4, step 8000/12500, loss = 1.8963\n",
+      "epoch 4/4, step 10000/12500, loss = 1.2918\n",
+      "epoch 4/4, step 12000/12500, loss = 1.6443\n",
+      "Finished training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(num_epochs):\n",
+    "    for i, (images, labels) in enumerate(train_loader):\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        if (i+1)%2000 == 0:\n",
+    "            print(f'epoch {epoch+1}/{num_epochs}, step {i+1}/{total_steps}, loss = {loss.item():.4f}')\n",
+    "print('Finished training.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "4ada7164",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "network accuracy = 39.13\n",
+      "Accuracy of plane: 47.62%\n",
+      "Accuracy of car: 83.78%\n",
+      "Accuracy of bird: 11.36%\n",
+      "Accuracy of cat: 13.18%\n",
+      "Accuracy of deer: 26.06%\n",
+      "Accuracy of dog: 29.36%\n",
+      "Accuracy of frog: 59.74%\n",
+      "Accuracy of horse: 55.42%\n",
+      "Accuracy of ship: 48.6%\n",
+      "Accuracy of truck: 16.18%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluation\n",
+    "with torch.no_grad():\n",
+    "    n_correct = 0\n",
+    "    n_samples = 0\n",
+    "    \n",
+    "    n_class_correct = [0 for i in range(10)]\n",
+    "    n_class_samples = [0 for i in range(10)]\n",
+    "    \n",
+    "    for images, labels in test_loader:\n",
+    "        outputs = model(images)\n",
+    "        \n",
+    "        # value, index of network pred output tensors\n",
+    "        _, preds = torch.max(outputs, 1)\n",
+    "        n_samples += labels.shape[0]\n",
+    "        n_correct += (preds == labels).sum().item()\n",
+    "        \n",
+    "        for i in range(batch_size):\n",
+    "            label = labels[i]\n",
+    "            pred = preds[i]\n",
+    "            if (label == pred):\n",
+    "                n_class_correct[label] += 1\n",
+    "            n_class_samples[label] += 1\n",
+    "        \n",
+    "    acc = 100.0 * n_correct / n_samples\n",
+    "    print(f'Network accuracy: {acc}') \n",
+    "    \n",
+    "    for i in range(10):\n",
+    "        acc = 100* n_class_correct[i] / n_class_samples[i]\n",
+    "        print(f'Accuracy of {classes[i]}: {acc}%')"
+   ]
   }
  ],
  "metadata": {
