--- a/pytorch/bert.ipynb
+++ b/pytorch/bert.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0180c157",
+   "id": "acfc9d6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "19016511",
+   "id": "0fac5d70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "636e0ab6",
+   "id": "43fbb6ea",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3e1c825a",
+   "id": "8eca830e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "df924819",
+   "id": "c7df2942",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "63d9fc60",
+   "id": "f057f7f7",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e3022cfb",
+   "id": "7f682134",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "84b131aa",
+   "id": "5ddf33bf",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "77129cee",
+   "id": "3baf51a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "775cb29f",
+   "id": "72d959cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f7466d81",
+   "id": "e8cf0511",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a32cf1",
+   "id": "65dba958",
    "metadata": {},
    "source": [
     "### Data Preprocessing"
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d76a9bbc",
+   "id": "d97bd1a7",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3df7d207",
+   "id": "6918b39c",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a3f4cc74",
+   "id": "8dfa2fe3",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "650c6381",
+   "id": "b9d08177",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "191fe0b0",
+   "id": "c574ed42",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "efea3f6b",
+   "id": "12c4a0fc",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "08f2aa86",
+   "id": "36c81f30",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "deda388a",
+   "id": "3ffb67c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2f3b7fc5",
+   "id": "ff86b05a",
    "metadata": {},
    "outputs": [
     {
@@ -703,9 +703,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0199b376",
+   "metadata": {},
+   "source": [
+    "### Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "45112eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GPReviewDataset(data.Dataset):\n",
+    "    \n",
+    "    def __init__(self, review, target, tokenizer, max_len):\n",
+    "        self.review = review\n",
+    "        self.target = target\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.max_len = max_len\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.review)\n",
+    "    \n",
+    "    def __getitem__(self, item):\n",
+    "        review = str(self.review[item])\n",
+    "        \n",
+    "        encoding = tokenizer.encode_plus(\n",
+    "            review,\n",
+    "            max_length=self.max_len,\n",
+    "            add_special_tokens=True,\n",
+    "            pad_to_max_length=True,\n",
+    "            return_attention_mask=True,\n",
+    "            return_token_type_ids=False,\n",
+    "            return_tensors='pt'\n",
+    "        )\n",
+    "        \n",
+    "        return {\n",
+    "            'input_ids': encoding['input_ids'],\n",
+    "            'attention_mask': encoding['attention_mask'],\n",
+    "            'targets': torch.tensor(self.target[item], dtype=torch.long)\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "f5625a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_LEN = 128\n",
+    "BATCH_SIZE = 8\n",
+    "EPOCHS = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "cb2823b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train, df_test = train_test_split(df, test_size=0.2, random_state=RANDOM_SEED)\n",
+    "df_val, df_test = train_test_split(df_test, test_size=0.5, random_state=RANDOM_SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "205b6b0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((12596, 12), (1575, 12), (1575, 12))"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.shape, df_val.shape, df_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "2a14f5c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataloader(df, tokenizer, max_len, batch_size):\n",
+    "    ds = GPReviewDataset(\n",
+    "        review=df.content.to_numpy(),\n",
+    "        target=df.sentiment.to_numpy(),\n",
+    "        tokenizer=tokenizer,\n",
+    "        max_len=max_len\n",
+    "    )\n",
+    "    \n",
+    "    return data.DataLoader(\n",
+    "        ds,\n",
+    "        batch_size=batch_size,\n",
+    "        num_workers=4\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "c5dca0a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader = create_dataloader(df_train, tokenizer, MAX_LEN, BATCH_SIZE)\n",
+    "val_dataloader = create_dataloader(df_val, tokenizer, MAX_LEN, BATCH_SIZE)\n",
+    "test_dataloader = create_dataloader(df_test, tokenizer, MAX_LEN, BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "7f895af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+      "  warnings.warn(\n",
+      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+      "  warnings.warn(\n",
+      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+      "  warnings.warn(\n",
+      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['input_ids', 'attention_mask', 'targets'])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = next(iter(train_dataloader))\n",
+    "data.keys()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a93c521",
+   "id": "7c0ef0f5",
    "metadata": {},
    "outputs": [],
    "source": []
