Loading BERT model from Hugging Face

--- a/pytorch/bert.ipynb
+++ b/pytorch/bert.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "acfc9d6a",
+   "id": "b1814138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0fac5d70",
+   "execution_count": 96,
+   "id": "250e7153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,23 @@
     "from sklearn.model_selection import train_test_split\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from torch import nn, optim\n",
-    "from torch.utils import data"
+    "from torch import nn, optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "be80cc49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "43fbb6ea",
+   "id": "e9acd93b",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8eca830e",
+   "id": "4efd9d2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7df2942",
+   "id": "0414137d",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f057f7f7",
+   "id": "6a4aa66a",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7f682134",
+   "id": "39835733",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5ddf33bf",
+   "id": "434860f7",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3baf51a9",
+   "id": "e9fa933e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "72d959cf",
+   "id": "4b976709",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e8cf0511",
+   "id": "225f8573",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65dba958",
+   "id": "0b2f8fa4",
    "metadata": {},
    "source": [
     "### Data Preprocessing"
@@ -435,75 +444,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d97bd1a7",
+   "execution_count": 78,
+   "id": "41a7d56e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48d9c16e6b2742de94c1506fb2ceba2f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/226k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "502be53bd0cd453da1447255110cf6ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/28.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61d39c6d53e0449389036e8f23bc0859",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/455k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95682c759c6243b8a8c6aef942c34dbd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tokenizer = transformers.BertTokenizer.from_pretrained('bert-base-uncased')"
+    "PRETRAINED_MODEL = 'bert-base-cased'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6918b39c",
+   "execution_count": 79,
+   "id": "ce751a27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = transformers.BertTokenizer.from_pretrained(PRETRAINED_MODEL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "65ff9719",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +473,7 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "['the', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'lazy', 'dog', '.']\n"
+      "['The', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'lazy', 'dog', '.']\n"
      ]
     }
    ],
@@ -524,8 +486,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8dfa2fe3",
+   "execution_count": 81,
+   "id": "ab63b71c",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +495,7 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "[1996, 4248, 2829, 4419, 5598, 2058, 1996, 13971, 3899, 1012]\n"
+      "[1109, 3613, 3058, 17594, 4874, 1166, 1103, 16688, 3676, 119]\n"
      ]
     }
    ],
@@ -545,8 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "b9d08177",
+   "execution_count": 82,
+   "id": "cbd4be0d",
    "metadata": {},
    "outputs": [
     {
@@ -570,8 +532,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c574ed42",
+   "execution_count": 114,
+   "id": "5c1d3c55",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +542,7 @@
        "dict_keys(['input_ids', 'attention_mask'])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,8 +563,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "12c4a0fc",
+   "execution_count": 85,
+   "id": "5b0f14b9",
    "metadata": {},
    "outputs": [
     {
@@ -610,8 +572,8 @@
      "output_type": "stream",
      "text": [
       "32\n",
-      "tensor([[  101,  1996,  4248,  2829,  4419,  5598,  2058,  1996, 13971,  3899,\n",
-      "          1012,   102,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "tensor([[  101,  1109,  3613,  3058, 17594,  4874,  1166,  1103, 16688,  3676,\n",
+      "           119,   102,     0,     0,     0,     0,     0,     0,     0,     0,\n",
       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
       "             0,     0]])\n"
      ]
@@ -624,8 +586,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "36c81f30",
+   "execution_count": 86,
+   "id": "72e2a49e",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3ffb67c3",
+   "id": "d22e5f62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ff86b05a",
+   "id": "85b3cfe2",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0199b376",
+   "id": "6172dc95",
    "metadata": {},
    "source": [
     "### Dataset"
@@ -712,12 +674,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "45112eec",
+   "execution_count": 98,
+   "id": "975b02a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class GPReviewDataset(data.Dataset):\n",
+    "class GPReviewDataset(Dataset):\n",
     "    \n",
     "    def __init__(self, review, target, tokenizer, max_len):\n",
     "        self.review = review\n",
@@ -742,6 +704,7 @@
     "        )\n",
     "        \n",
     "        return {\n",
+    "            'review_text': review,\n",
     "            'input_ids': encoding['input_ids'],\n",
     "            'attention_mask': encoding['attention_mask'],\n",
     "            'targets': torch.tensor(self.target[item], dtype=torch.long)\n",
@@ -750,20 +713,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "f5625a73",
+   "execution_count": 101,
+   "id": "d12391f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_LEN = 128\n",
-    "BATCH_SIZE = 8\n",
-    "EPOCHS = 20"
+    "MAX_LEN = 160\n",
+    "BATCH_SIZE = 16\n",
+    "EPOCHS = 50"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "cb2823b4",
+   "id": "7b048bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "205b6b0f",
+   "id": "1db8b508",
    "metadata": {},
    "outputs": [
     {
@@ -794,8 +757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "2a14f5c1",
+   "execution_count": 99,
+   "id": "314bf018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +770,7 @@
     "        max_len=max_len\n",
     "    )\n",
     "    \n",
-    "    return data.DataLoader(\n",
+    "    return DataLoader(\n",
     "        ds,\n",
     "        batch_size=batch_size,\n",
     "        num_workers=4\n",
@@ -816,8 +779,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "c5dca0a6",
+   "execution_count": 102,
+   "id": "04089ede",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,44 +791,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "7f895af3",
+   "execution_count": 103,
+   "id": "a890fd83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['review_text', 'input_ids', 'attention_mask', 'targets'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = next(iter(train_dataloader))\n",
+    "print(data.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "b96d2fdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([16, 1, 160])\n",
+      "torch.Size([16, 1, 160])\n",
+      "torch.Size([16])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['input_ids'].shape)\n",
+    "print(data['attention_mask'].shape)\n",
+    "print(data['targets'].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "127a9c8b",
+   "metadata": {},
+   "source": [
+    "### Hugging Face: BERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "ea9d2231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertModel, BertConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "725cd1f8",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
-      "  warnings.warn(\n",
-      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
-      "  warnings.warn(\n",
-      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
-      "  warnings.warn(\n",
-      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:2221: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
-      "  warnings.warn(\n"
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['input_ids', 'attention_mask', 'targets'])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = next(iter(train_dataloader))\n",
-    "data.keys()"
+    "bert_model = BertModel.from_pretrained(PRETRAINED_MODEL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "b06aac36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = bert_model(\n",
+    "    input_ids=encoding['input_ids'],\n",
+    "    attention_mask=encoding['attention_mask']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "888eb8e2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 32, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seq of hidden states from last layer (encoder) of BERT model\n",
+    "print(state['last_hidden_state'].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "44ab1631",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pooled output of hidden states from last layer (encoder) of BERT model\n",
+    "print(state['pooler_output'].shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c0ef0f5",
+   "id": "35fb71f3",
    "metadata": {},
    "outputs": [],
    "source": []
